k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lamp-app
spec:
  selector:
    app: lamp-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
