k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lamp-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: '*.rootedinfra.site'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lamp-app
            port:
              number: 80
